// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Select (snapshot) renders content composition (Group + Label + Items + Separator) 1`] = `
<div
  aria-labelledby="radix-_r_5_"
  role="group"
>
  <div
    class="py-1.5 pl-8 pr-2 text-sm font-semibold"
    id="radix-_r_5_"
  >
    Fruits
  </div>
  <div
    aria-hidden="true"
    class="-mx-1 my-1 h-px bg-muted"
  />
</div>
`;

exports[`Select (snapshot) renders disabled trigger 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-_r_3_"
  aria-expanded="false"
  class="flex h-10 w-full items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1"
  data-disabled=""
  data-placeholder=""
  data-state="closed"
  dir="ltr"
  disabled=""
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    Choose...
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down size-4 opacity-50"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`Select (snapshot) renders trigger with placeholder in closed state 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-_r_0_"
  aria-expanded="false"
  class="flex h-10 w-full items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1"
  data-placeholder=""
  data-state="closed"
  dir="ltr"
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    Choose...
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down size-4 opacity-50"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;
